--- a/iframe.html
+++ b/iframe.html
@@ -529,7 +529,8 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C1rm1O1a.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bbkovga9.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/iframe-DpJ_0ui_.css">
   </head>
 
   <body>
