--- a/iframe.html
+++ b/iframe.html
@@ -529,7 +529,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bbkovga9.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DYX4ekqS.js"></script>
     <link rel="stylesheet" crossorigin href="./assets/iframe-DpJ_0ui_.css">
   </head>
 
