--- a/iframe.html
+++ b/iframe.html
@@ -529,8 +529,8 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Ddyl0vjK.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/iframe-DpJ_0ui_.css">
+    <script type="module" crossorigin src="./assets/iframe-DLpz0ihO.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/iframe-D3gYB4xU.css">
   </head>
 
   <body>
