--- a/iframe.html
+++ b/iframe.html
@@ -529,8 +529,8 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DLpz0ihO.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/iframe-D3gYB4xU.css">
+    <script type="module" crossorigin src="./assets/iframe-_tByA0vL.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/iframe-CC2Jidxf.css">
   </head>
 
   <body>
